--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bootstrap": "^5.3.8",
     "gsap": "^3.13.0",
+    "posthog-js": "^1.266.0",
     "vite-plugin-pwa": "^1.0.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
